# grpc-api-framework

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  pyproject.toml  requirements.txt
api/: config.py  logging.yaml  server.py
api/core/: greeter.py
api/proto/: greeter.proto
proto/greeter/v1/: greeter.proto
tests/: conftest.py
tests/core/: test_greeter.py
